--- a/app/src/main/res/layout/toolbar_view_custom_layout.xml
+++ b/app/src/main/res/layout/toolbar_view_custom_layout.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/coordinator_layout_toolbar_view"
   android:layout_width="match_parent"
   android:layout_height="wrap_content">
 
   <!-- The 'AppBarLayout' object holds the 'Toolbar' and the 'TabLayout', declaring its own 'theme' (in this case, white font is used) -->
-  <android.support.design.widget.AppBarLayout
+  <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/app_bar_toolbar_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar_toolbar_view"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:gravity="center" />
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
       android:id="@+id/tab_layout_toolbar_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -26,5 +26,5 @@
       android:visibility="gone"
       app:tabMode="scrollable" />
 
-  </android.support.design.widget.AppBarLayout>
-</android.support.design.widget.CoordinatorLayout>
+  </com.google.android.material.appbar.AppBarLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
